--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,41 +2,36 @@ name: Deploy to VPS
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main  # Ganti dengan nama branch yang kamu inginkan
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
-      uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
+    - name: Set up SSH key
+      uses: webfactory/ssh-agent@v0.5.3
       with:
-        node-version: '20'
+        ssh-private-key: ${{ secrets.VPS_PRIVATE_KEY }}
 
-    - name: Install dependencies & build Angular
-      run: |
-        npm install
-        npm run build
-
-    - name: Deploy to VPS via SCP
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USER }}
-        key: ${{ secrets.VPS_PRIVATE_KEY }}
-        known_hosts: ${{ secrets.VPS_KNOWN_HOSTS }}
-        source: "dist/app-pkm/*"
-        target: "/var/www/html/app-puskesmas"
-
-    - name: Restart nginx on VPS
+    - name: Deploy to VPS using SSH
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USER }}
         key: ${{ secrets.VPS_PRIVATE_KEY }}
         script: |
-          sudo systemctl restart nginx
+          # Ganti perintah berikut dengan yang sesuai untuk aplikasi kamu
+          cd /var/www/html/app-pkm  # Sesuaikan dengan lokasi folder aplikasi kamu
+          git pull origin main  # Pull latest changes dari GitHub
+          npm install  # Install dependencies (Jika menggunakan Node.js)
+          npm run build  # Build aplikasi (Jika menggunakan Angular/React)
+
+          # Salin hasil build ke folder app-puskesmas
+          cp -r /var/www/html/app-pkm/dist/app-pkm/* /var/www/html/app-puskesmas/  # Menyalin file hasil build ke app-puskesmas
+
+          sudo systemctl restart nginx  # Restart Nginx untuk apply perubahan
