--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
     
     - name: Deploy your code
       run: |
-        git clone git@github.com:username/repository.git
+        git clone git@github.com:mugiaadha/repository.git
         # Langkah deployment lainnya
