--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
     
     - name: Deploy your code
       run: |
-        git clone git@github.com:mugiaadha/app-pkm.git
+        git pull origin
         # Langkah deployment lainnyaa
