--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Deploy your code
       run: |
         cd /var/www/html/app-pkm
-        git pull origin
+        git pull origin main
         # Langkah deployment lainnyaa
