--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,5 @@ jobs:
     
     - name: Deploy your code
       run: |
-        cd /var/www/html/app-pkm
-        git pull origin main
+        cd /var/www/html
         # Langkah deployment lainnyaa
