--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,14 @@ jobs:
           echo "DEPLOY_KEY is set"
         fi
 
-    - name: Setup SSH key for VPS
+    - name: Setup SSH key for GitHub
       run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/deploy-key
         chmod 600 ~/.ssh/deploy-key
-        ssh-keyscan 103.84.207.50 >> ~/.ssh/known_hosts  # Ganti dengan IP VPS kamu
-
-    - name: SSH into VPS and deploy
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+    
+    - name: Deploy your code
       run: |
-        ssh -i ~/.ssh/deploy-key root@103.84.207.50 "cd /var/www/html && ls && # Langkah deployment lainnya"
+        git clone git@github.com:mugiaadha/app-pkm.git
+        # Langkah deployment lainnyaa
