--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Deploy your code
       run: |
         git clone git@github.com:mugiaadha/app-pkm.git
-        # Langkah deployment lainnyaa
+        # Langkah deployment lainnyaaa
