--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: CI/CD to VPS
 
 on:
   push:
@@ -8,28 +8,23 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-    - name: Debug DEPLOY_KEY
-      run: |
-        echo "Checking if DEPLOY_KEY is set"
-        if [ -z "${{ secrets.DEPLOY_KEY }}" ]; then
-          echo "DEPLOY_KEY is not set"
-        else
-          echo "DEPLOY_KEY is set"
-        fi
+      - name: Setup SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-    - name: Setup SSH key for GitHub
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/deploy-key
-        chmod 600 ~/.ssh/deploy-key
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-    
-    - name: Deploy your code
-      run: |
-        git clone git@github.com:mugiaadha/app-pkm.git
-        # Langkah deployment lainnyaaa
+      - name: Clone Private Repo ke VPS Folder Lokal
+        run: |
+          git clone git@github.com:mugiaadha/app-pkm.git
+
+      # Contoh step deploy ke VPS kalau butuh:
+      - name: Deploy ke VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no user@vps-ip 'echo "Deploy script di sini"'
