--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.VPS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
@@ -27,4 +27,4 @@ jobs:
       # Contoh step deploy ke VPS kalau butuh:
       - name: Deploy ke VPS
         run: |
-          ssh -o StrictHostKeyChecking=no user@vps-ip 'echo "Deploy script di sini"'
+          ssh -o StrictHostKeyChecking=no root@103.84.207.50 'echo "Deploy script di sini"'
