--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
           npm run build
         working-directory: .  # Ganti dengan folder subproject jika ada
 
+      - name: Display build result (index.html)
+        run: |
+          cat ./dist/app-pkm/index.html  # Menampilkan isi index.html setelah build
+
       - name: Copy Build to VPS
         run: |
           scp -r ./dist/app-pkm/* root@103.84.207.50:/var/www/html/app-puskesmas.mikahouse.my.id
