--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Copy Build to VPS
         run: |
-          scp -r ./dist/app-pkm/* root@103.84.207.50:/var/www/html/app-puskesmas.mikahouse.my.id
+          scp -r ./dist/app-pkm/browser/* root@103.84.207.50:/var/www/html/app-puskesmas.mikahouse.my.id
