--- a/.github/workflows/cabang-config.json
+++ b/.github/workflows/cabang-config.json
@@ -1,5 +1,1 @@
-[
-  { "name": "cabang1", "subdomain": "app-cabang1.mikahouse.my.id" },
-  { "name": "cabang2", "subdomain": "app-cabang2.mikahouse.my.id" },
-  { "name": "cabang3", "subdomain": "app-cabang3.mikahouse.my.id" }
-]
+[{ "name": "puskesmas", "subdomain": "app-puskesmas.mikahouse.my.id" }]
