--- a/.github/workflows/cabang-config.json
+++ b/.github/workflows/cabang-config.json
@@ -1,6 +1,3 @@
 [
-    { "name": "puskesmas", "subdomain": "tabaro.mikahouse.my.id" },
-    { "name": "puskesmas", "subdomain": "puceh.mikahouse.my.id" },
-    { "name": "puskesmas", "subdomain": "suakribee.mikahouse.my.id" },
-    { "name": "puskesmas", "subdomain": "makmur.mikahouse.my.id" }
+    { "name": "puskesmas", "subdomain": "tabaro.mikahouse.my.id" }
 ]
