--- a/.github/workflows/cabang-config.json
+++ b/.github/workflows/cabang-config.json
@@ -1,3 +1,4 @@
 [
-    { "name": "puskesmas", "subdomain": "tabaro.mikahouse.my.id" }
+  { "name": "puskesmas", "subdomain": "tabaro.mikahouse.my.id" },
+  { "name": "staging", "subdomain": "staging.mikahouse.my.id" }
 ]
