--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,32 +26,28 @@ jobs:
           npm run build
         working-directory: . # Ganti dengan folder subproject jika ada
 
-      - name: Bersihkan dan Buat Ulang Folder di VPS
+      - name: Download .github/workflows/cabang-config.json from JSONBin
+        run: |
+          curl -s https://api.jsonbin.io/v3/b/68074a498a456b79668eac81 -o .github/workflows/cabang-config.json
+
+      - name: Bersihkan Folder di VPS dan Deploy
         run: |
           VPS_IP="103.84.207.50"
 
           echo "Hapus semua folder di /var/www/html"
           ssh root@$VPS_IP 'rm -rf /var/www/html/*'
 
-          echo "Buat folder untuk tiap cabang"
-          for SUBDOMAIN in $(jq -r '.[].subdomain' .github/workflows/cabang-config.json); do
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-          done
-
-      - name: Deploy hasil build ke cabang aktif
-        run: |
-          VPS_IP="103.84.207.50"
-          for SUBDOMAIN in $(jq -r '.[] | select(.active == true) | .subdomain' .github/workflows/cabang-config.json); do
-            echo "Deploy ke $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
-          done
-
-      - name: Deploy halaman non-aktif ke cabang yang belum bayar
-        run: |
-          VPS_IP="103.84.207.50"
-          for SUBDOMAIN in $(jq -r '.[] | select(.active == false) | .subdomain' .github/workflows/cabang-config.json); do
-            echo "Set non-aktif page untuk $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+          echo "Buat folder dan deploy ke setiap cabang"
+          for SUBDOMAIN in $(jq -r '.[] | .subdomain' .github/workflows/cabang-config.json); do
+            ACTIVE=$(jq -r ".[] | select(.subdomain == \"$SUBDOMAIN\") | .active" .github/workflows/cabang-config.json)
+            
+            if [ "$ACTIVE" == "true" ]; then
+              echo "Deploy ke $SUBDOMAIN"
+              ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
+              scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
+            else
+              echo "Set non-aktif page untuk $SUBDOMAIN"
+              ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
+              scp inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+            fi
           done
