--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,31 +26,27 @@ jobs:
           npm run build
         working-directory: . # Ganti dengan folder subproject jika ada
 
-      - name: Bersihkan dan Buat Ulang Folder di VPS
+      - name: Deploy to VPS
         run: |
           VPS_IP="103.84.207.50"
 
+          # Hapus semua folder di /var/www/html
           echo "Hapus semua folder di /var/www/html"
           ssh root@$VPS_IP 'rm -rf /var/www/html/*'
 
-          echo "Buat folder untuk tiap cabang"
-          for SUBDOMAIN in $(jq -r '.[].subdomain' .github/workflows/cabang-config.json); do
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-          done
+          # Ambil data subdomain dan aktifitas dari file konfigurasi
+          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' .github/workflows/cabang-config.json)
+          INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' .github/workflows/cabang-config.json)
 
-      - name: Deploy hasil build ke cabang aktif
-        run: |
-          VPS_IP="103.84.207.50"
-          for SUBDOMAIN in $(jq -r '.[] | select(.active == true) | .subdomain' .github/workflows/cabang-config.json); do
+          # Deploy ke subdomain yang aktif
+          for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
             scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
           done
 
-      - name: Deploy halaman non-aktif ke cabang yang belum bayar
-        run: |
-          VPS_IP="103.84.207.50"
-          for SUBDOMAIN in $(jq -r '.[] | select(.active == false) | .subdomain' .github/workflows/cabang-config.json); do
+          # Deploy halaman non-aktif ke subdomain yang belum bayar
+          for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
             scp inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
