--- a/.github/workflows/cabang-config.json
+++ b/.github/workflows/cabang-config.json
@@ -27,7 +27,7 @@
   {
     "name": "new-feature",
     "subdomain": "new-feature.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "another-feature",
@@ -37,7 +37,7 @@
   {
     "name": "new-feature",
     "subdomain": "new-feature.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "another-feature",
@@ -47,7 +47,7 @@
   {
     "name": "new-feature",
     "subdomain": "new-feature.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "another-new-feature",
@@ -57,7 +57,7 @@
   {
     "name": "yet-another-feature",
     "subdomain": "yet-another-feature.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-xyz",
@@ -67,7 +67,7 @@
   {
     "name": "feature-abc",
     "subdomain": "feature-abc.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-123",
@@ -77,7 +77,7 @@
   {
     "name": "feature-456",
     "subdomain": "feature-456.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-789",
@@ -87,7 +87,7 @@
   {
     "name": "feature-101112",
     "subdomain": "feature-101112.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-131415",
@@ -97,7 +97,7 @@
   {
     "name": "feature-161718",
     "subdomain": "feature-161718.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-192021",
@@ -107,7 +107,7 @@
   {
     "name": "feature-222324",
     "subdomain": "feature-222324.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-252627",
@@ -117,7 +117,7 @@
   {
     "name": "feature-282930",
     "subdomain": "feature-282930.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-313233",
@@ -127,7 +127,7 @@
   {
     "name": "feature-343536",
     "subdomain": "feature-343536.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-373839",
@@ -137,7 +137,7 @@
   {
     "name": "feature-404142",
     "subdomain": "feature-404142.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-434445",
@@ -147,7 +147,7 @@
   {
     "name": "feature-464748",
     "subdomain": "feature-464748.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-495051",
@@ -157,7 +157,7 @@
   {
     "name": "feature-525354",
     "subdomain": "feature-525354.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-555657",
@@ -167,7 +167,7 @@
   {
     "name": "feature-585960",
     "subdomain": "feature-585960.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-616263",
@@ -177,7 +177,7 @@
   {
     "name": "feature-646566",
     "subdomain": "feature-646566.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-676869",
@@ -187,7 +187,7 @@
   {
     "name": "feature-707172",
     "subdomain": "feature-707172.mikahouse.my.id",
-    "active": false
+    "active": true
   },
   {
     "name": "feature-737475",
@@ -197,6 +197,6 @@
   {
     "name": "feature-767778",
     "subdomain": "feature-767778.mikahouse.my.id",
-    "active": false
+    "active": true
   }
 ]
