--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - main # Ganti sesuai branch yang kamu pakai
+      - main
 
 jobs:
   deploy:
@@ -24,28 +24,28 @@ jobs:
         run: |
           npm install
           npm run build
-        working-directory: . # Ganti dengan folder subproject jika ada
+        working-directory: .
+
+      - name: Download cabang-config.json from Supabase
+        run: |
+          curl -o cabang-config.json https://wulzrugvpldjbdsxscku.supabase.co/storage/v1/object/public/app-pkm/cabang-config.json
 
       - name: Deploy to VPS
         run: |
           VPS_IP="103.84.207.50"
 
-          # Hapus semua folder di /var/www/html
           echo "Hapus semua folder di /var/www/html"
           ssh root@$VPS_IP 'rm -rf /var/www/html/*'
 
-          # Ambil data subdomain dan aktifitas dari file konfigurasi
-          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' .github/workflows/cabang-config.json)
-          INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' .github/workflows/cabang-config.json)
+          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' cabang-config.json)
+          INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' cabang-config.json)
 
-          # Deploy ke subdomain yang aktif
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
             scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
           done
 
-          # Deploy halaman non-aktif ke subdomain yang belum bayar
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
