--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,11 +54,12 @@ jobs:
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./frontend/dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
+            scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
           done
 
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./frontend/inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+            scp -r ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
           done
+        working-directory: frontend
