--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -1,4 +1,4 @@
-name: Deploy to VPS
+name: Deploy Backend to VPS
 
 on:
   push:
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Frontend Repo
+      - name: Checkout Backend Repo
         uses: actions/checkout@v2
         with:
           repository: mugiaadha/app-pkm
           token: ${{ secrets.VPS_PAT_TOKEN }}
-          path: frontend
+          path: backend
 
       - name: Setup SSH
         run: |
@@ -24,35 +24,19 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Install dependencies & Build
-        run: |
-          npm install
-          npm run build
-        working-directory: frontend
-
       - name: Download cabang-config.json from Supabase
         run: |
           curl -o cabang-config.json https://wulzrugvpldjbdsxscku.supabase.co/storage/v1/object/public/app-pkm/cabang-config.json
 
-      - name: Deploy Frontend to VPS
+      - name: Deploy Backend to VPS
         run: |
           VPS_IP="${{ secrets.VPS_HOST }}"
 
-          echo "Hapus semua folder di /var/www/html"
-          ssh root@$VPS_IP 'rm -rf /var/www/html/*'
-
           ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
-          INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' ../cabang-config.json)
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
+            scp -r ./* root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
           done
-
-          for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
-            echo "Set non-aktif page untuk $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
-          done
-        working-directory: frontend
+        working-directory: backend
