--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -1,4 +1,4 @@
-name: Deploy to VPS
+name: Deploy Frontend to VPS
 
 on:
   push:
@@ -24,19 +24,35 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
+      - name: Install dependencies & Build
+        run: |
+          npm install
+          npm run build
+        working-directory: frontend
+
       - name: Download cabang-config.json from Supabase
         run: |
           curl -o cabang-config.json https://wulzrugvpldjbdsxscku.supabase.co/storage/v1/object/public/app-pkm/cabang-config.json
 
-      - name: Deploy Backend to VPS
+      - name: Deploy Frontend to VPS
         run: |
           VPS_IP="${{ secrets.VPS_HOST }}"
 
+          echo "Hapus semua folder di /var/www/html"
+          ssh root@$VPS_IP 'rm -rf /var/www/html/*'
+
           ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
+          INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' ../cabang-config.json)
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./* root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
+            scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
           done
-        working-directory: backend
+
+          for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
+            echo "Set non-aktif page untuk $SUBDOMAIN"
+            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
+            scp -r ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+          done
+        working-directory: frontend
