--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -36,7 +36,7 @@ jobs:
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
+            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN/backend/"
             scp -r ./* root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
           done
         working-directory: backend
