--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,6 @@ jobs:
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN/backend/"
-            scp -r ./* root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
+            scp -r ./app root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
           done
         working-directory: backend
