--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,9 +70,14 @@ jobs:
 
           ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
 
+          # Kompres folder backend
+          tar czf backend.tar.gz ./*
+
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
+
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN/backend/"
-            scp -r ./app root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
+            scp backend.tar.gz root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
+            ssh root@$VPS_IP "cd /var/www/html/$SUBDOMAIN/backend && tar xzf backend.tar.gz && rm backend.tar.gz"
           done
         working-directory: backend
