--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,16 +51,22 @@ jobs:
           ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
           INACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == false) | .subdomain' ../cabang-config.json)
 
+          echo "Kompresi hasil build..."
+          cd dist/app-pkm/browser
+          tar czf ../../frontend.tar.gz ./*
+          cd -
+
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./dist/app-pkm/browser/* root@$VPS_IP:/var/www/html/$SUBDOMAIN/
+            scp dist/frontend.tar.gz root@$VPS_IP:/var/www/html/$SUBDOMAIN/
+            ssh root@$VPS_IP "cd /var/www/html/$SUBDOMAIN && tar xzf frontend.tar.gz && rm frontend.tar.gz"
           done
 
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp -r ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+            scp ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
           done
         working-directory: frontend
 
