--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -39,11 +39,13 @@ jobs:
           tar czf backend.tar.gz ./*
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
+            path_be=/var/www/html/$SUBDOMAIN/backend
+
             echo "Deploy ke $SUBDOMAIN"
 
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN/backend/"
-            scp backend.tar.gz root@$VPS_IP:/var/www/html/$SUBDOMAIN/backend/
-            ssh root@$VPS_IP "cd /var/www/html/$SUBDOMAIN/backend && tar xzf backend.tar.gz && rm backend.tar.gz"
+            ssh root@$VPS_IP "mkdir -p $path_be"
+            scp backend.tar.gz root@$VPS_IP:$path_be
+            ssh root@$VPS_IP "cd $path_be && tar xzf backend.tar.gz && rm backend.tar.gz"
           done
 
           rm backend.tar.gz
