--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -41,10 +41,20 @@ jobs:
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
 
-            path_be=/var/www/html/$SUBDOMAIN/backend
+            path_be="/var/www/html/$SUBDOMAIN/backend"
+
+            # Buat folder kalau belum ada
             ssh root@$VPS_IP "mkdir -p $path_be"
-            scp backend.tar.gz root@$VPS_IP:$path_be
-            ssh root@$VPS_IP "cd $path_be && tar xzf backend.tar.gz && rm backend.tar.gz"
+
+            # Kirim file arsip
+            scp backend.tar.gz root@$VPS_IP:$path_be/
+
+            # Ekstrak dan hapus file arsip
+            ssh root@$VPS_IP << EOF
+              cd $path_be && \
+              tar -xzf backend.tar.gz && \
+              rm backend.tar.gz
+            EOF
           done
 
           rm backend.tar.gz
