--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -35,21 +35,15 @@ jobs:
 
           ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
 
-          # Kompres folder backend
-          tar czf backend.tar.gz ./*
-
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
 
-            path_be="/var/www/html/$SUBDOMAIN/backend"
+            be_path="/var/www/html/$SUBDOMAIN/backend"
 
             # Buat folder kalau belum ada
-            ssh root@$VPS_IP "mkdir -p $path_be"
+            ssh root@$VPS_IP "mkdir -p $be_path"
 
-            # Kirim file arsip
-            scp backend.tar.gz root@$VPS_IP:$path_be
-
-            # Ekstrak dan hapus file arsip
-            ssh root@$VPS_IP "cd $path_be && tar -xzf backend.tar.gz && rm backend.tar.gz"
+            # Kirim file menggunakan rsync
+            rsync -avz --delete ./ root@$VPS_IP:$be_path/
           done
         working-directory: backend
