--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -51,14 +51,16 @@ jobs:
 
           for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
             echo "Deploy ke $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp dist/frontend.tar.gz root@$VPS_IP:/var/www/html/$SUBDOMAIN/
-            ssh root@$VPS_IP "cd /var/www/html/$SUBDOMAIN && tar xzf frontend.tar.gz && rm frontend.tar.gz"
+
+            fe_path="/var/www/html/$SUBDOMAIN"
+
+            ssh root@$VPS_IP "mkdir -p $fe_path"
+            rsync -avz dist/app-pkm/browser/ root@$VPS_IP:$fe_path/
           done
 
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
-            ssh root@$VPS_IP "mkdir -p /var/www/html/$SUBDOMAIN"
-            scp ./inactive.html root@$VPS_IP:/var/www/html/$SUBDOMAIN/index.html
+            ssh root@$VPS_IP "mkdir -p $fe_path"
+            rsync -avz ./inactive.html root@$VPS_IP:$fe_path/index.html
           done
         working-directory: frontend
