--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -52,12 +52,12 @@ jobs:
             fe_path="/var/www/html/$SUBDOMAIN"
 
             ssh root@$VPS_IP "mkdir -p $fe_path"
-            rsync -avz --delete dist/app-pkm/browser/ root@$VPS_IP:$fe_path/
+            rsync -avz --delete --exclude='.git' dist/app-pkm/browser/ root@$VPS_IP:$fe_path/
           done
 
           for SUBDOMAIN in $INACTIVE_SUBDOMAINS; do
             echo "Set non-aktif page untuk $SUBDOMAIN"
             ssh root@$VPS_IP "mkdir -p $fe_path"
-            rsync -avz --delete ./inactive.html root@$VPS_IP:$fe_path/index.html
+            rsync -avz --delete --exclude='.git' ./inactive.html root@$VPS_IP:$fe_path/index.html
           done
         working-directory: frontend
