--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  deploy-frontend:
     runs-on: ubuntu-latest
 
     steps:
@@ -61,3 +61,45 @@ jobs:
             rsync -avz --delete --exclude='.git' ./inactive.html root@$VPS_IP:$fe_path/index.html
           done
         working-directory: frontend
+
+  deploy-backend:
+    needs: deploy-frontend
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VPS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Checkout Backend Repo
+        uses: actions/checkout@v2
+        with:
+          repository: mugiaadha/app-pkm-clenic
+          token: ${{ secrets.VPS_PAT_TOKEN }}
+          path: backend
+
+      - name: Download cabang-config.json from Supabase
+        run: |
+          curl -o cabang-config.json https://wulzrugvpldjbdsxscku.supabase.co/storage/v1/object/public/app-pkm/cabang-config.json
+
+      - name: Deploy Backend to VPS
+        run: |
+          VPS_IP="${{ secrets.VPS_HOST }}"
+
+          ACTIVE_SUBDOMAINS=$(jq -r '.[] | select(.active == true) | .subdomain' ../cabang-config.json)
+
+          for SUBDOMAIN in $ACTIVE_SUBDOMAINS; do
+            echo "Deploy ke $SUBDOMAIN"
+
+            be_path="/var/www/html/$SUBDOMAIN/backend"
+
+            # Buat folder kalau belum ada
+            ssh root@$VPS_IP "mkdir -p $be_path"
+
+            # Kirim file menggunakan rsync
+            rsync -avz --delete --exclude='.git' ./ root@$VPS_IP:$be_path/
+          done
+        working-directory: backend
